css: adjusted clues-title font size, reduced clue panel width and padding. Added space to clue-number to accomodate more characters without breaking alignment (e.g. hex pathfinder) js: added localstorage settings for clue notes (input-box), and ensured they display by default if there is any text loaded

--- a/variety-solver/styles.css
+++ b/variety-solver/styles.css
@@ -60,12 +60,13 @@ body {
 h2.clues-title {
   padding: 0;
   margin: 0px 0px 5px 0px;
+  font-size: 1.3rem;
 }
 
 #clue-panels {
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 475px;
     height: 100%; /* Take up the full height of the container */
     margin-left: 20px;
 }
@@ -74,7 +75,7 @@ h2.clues-title {
     flex: 1; /* Each panel will take up an equal portion of the height */
     overflow-y: scroll;
     border: 1px solid #ccc;
-    padding: 10px;
+    padding: 5px;
     background: #f9f9f9;
     box-sizing: border-box;
 }
@@ -108,14 +109,14 @@ h2.clues-title {
   font-weight: 600;
   margin-right: 0.7rem;
   text-align: right;
-  min-width: 1.7rem;
+  min-width: 3.5rem;
 }
 
 /* Placeholder for clue text */
 .clue-text {
     flex: 1 1 auto;
     word-wrap: break-word;
-    margin-right: 0.6rem;
+    margin-right: 0.2rem;
 }
 
 /* Clue explanations */
@@ -155,6 +156,7 @@ h2.clues-title {
 }
 .info-button {
     padding: 10px 20px;
+    margin-top: 10px;
     font-size: 16px;
     background-color: #007bff;
     color: white;
